# DashLoad

./: .gitignore  .gitmodules  README.md  forge.config.ts  index.html  package-lock.json  package.json  postcss.config.ts  tsconfig.json  vite.main.config.ts  vite.renderer.config.ts
assets/: PlusSign.xcf
components/ui/: button.tsx  data-table.tsx  progress.tsx  table.tsx
src/: app.tsx  index.css  main.ts  preload.ts  renderer.tsx
src/backend/: .gitignore  argparse  compile_backend.py  download.py  log_config.yaml  log_filters.py  pyproject.toml  requirements.txt  server.py  start-backend.fish  start-backend.py  start-backend.sh
src/backend/libtorrent_backend/: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
src/backend/libtorrent_backend/src/: main.cpp  test.cpp  torrenting.cpp  torrenting.hpp
src/backend/libtorrent_backend/src/torrenting/: AlertHandler.cpp  AlertHandler.hpp  TorrentDownloader.cpp  TorrentDownloader.hpp
src/backend/src/: deleter.py  download.py  download_cleanup.py  download_manager.py  download_manager_factory.py  download_registry.py  downloader.py  downloadinfojson.py  downloadinfos.py  downloadinfoserializer.py  downloaditem.py  downloadmetainfojson.py  downloadstates.py  extras.py  fastapi_exceptions.py  hook.py  internet_connections.py  server.py
src/backend/test/: test_api.py  test_cleanup.py
src/backend/test/integration/: test_api.py
src/backend/test/unit/: test_cleanup.py  test_hook.py  test_serialization.py
src/code/: DownloadFromServer.ts  FrontendDownloadFunctions.ts  MiscObj.ts  SerializeRequests.ts  ServerErrorTypes.ts
src/components/: AddDownloadDialog.tsx  DownloadDeleteDialog.tsx  FocusableRow.tsx  downloadlist.tsx  gauge.tsx
src/hooks/: BrowserDownloadStartRequest.ts  GetDefaultDataForDownloadInfo.ts  KeyHandler.ts
src/styles/: globals.css  white-image.scss
src/types/: renderer.d.ts
