[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
[project]
name = "dashload"
version = "1.0.0"
dependencies = [
	"fastapi==0.115.12",
	"pydantic==2.11.4",
	"pypdl==1.5.3",
	"Requests==2.32.3",
	"uvicorn==0.34.2",
]
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
